# sandbox3d

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  config.h.in  update_external.sh
cmake/Modules/: Findassimp.cmake
data/: render.dtd  render.xml
data/shaders/: Makefile  blur.frag  compose.frag  compose.fs  depth_only.fs  depth_only.vert  directionnal_light.frag  directionnal_light.vert  full.frag  full.fs  full.vert  full.vs  fullscreen_bright.frag  fullscreen_depth.frag  fullscreen_exp.frag  fullscreen_luminance.frag  fullscreen_luminance_mean.frag  fullscreen_normal.fs  fullscreen_scaled.vert  gaussian_blur_h.frag  gaussian_blur_v.frag  geometry_normalmap_pass.frag  geometry_normalmap_pass.fs  geometry_normalmap_pass.vert  geometry_normalmap_pass.vs  geometry_pass.frag  geometry_pass.fs  geometry_pass.vert  geometry_pass.vs  tonemapping.frag
doc/: RenderPasses.md  Shaders.md
include/: GPU.h  GPU_helper.h  GPU_mem.h
include/GL/: glcorearb.h
include/Misc/: Timer.h
scripts/: check_shaders.sh  deploy_shaders.sh
src/: CMakeLists.txt  DrawableSurface.cpp  DrawableSurface.h  EditorInterface.cpp  MainWindow.cpp  MainWindow.h  MeshListWidget.cpp  MeshListWidget.h  config.h.in  main.cpp
src/GUI/: DrawableSurface.cpp  DrawableSurface.h  EnvSettingsWidget.cpp  EnvSettingsWidget.h  MainWindow.cpp  MainWindow.h  MeshListWidget.cpp  NodeCreationWindow.cpp  NodeCreationWindow.h  NodeDescription.cpp  NodeDescription.h  NodeEditorWindow.cpp  NodeEditorWindow.h  NodeOperationCreationWindow.cpp  NodeOperationCreationWindow.h  NodeTextureCreationWindow.cpp  NodeTextureCreationWindow.h
src/GUI/Camera/: Camera.cpp  Camera.h
src/GUI/loaders/: MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h
src/RHI/: Pass.h  Pipeline.h  RHI.h  RHI_structs.h  Sampler.h
src/RHI/OpenGL/: CommandBuffer.cpp  Framebuffer.cpp  Pass.cpp  Sampler.cpp  ShaderModule.cpp  Subpass.cpp  Subpass.h
src/Rendering/: Environment.h  GraphicsAlgorithm.cpp  GraphicsAlgorithm.h  Pass.cpp  Pass.h  Pipeline.cpp  Pipeline.h  RenderTexture.cpp  RenderTexture.h  RenderXML.cpp  RenderXML.h  Rendering.cpp  Rendering.h  StrToGL.cpp  StrToGL.h  Subpass.cpp  Subpass.h  Technique.cpp  Technique.h  utils.inl
src/Rendering/Algorithms/: Bloom.cpp  Bloom.h  BlurH.cpp  BlurH.h  BlurV.cpp  BlurV.h  BrightFilter.cpp  BrightFilter.h  CelShading.cpp  CelShading.h  Compose.cpp  Compose.h  FXAA.cpp  FXAA.h  Fog.cpp  Fog.h  RenderDepthOnly.cpp  RenderDepthOnly.h  RenderLightsToAccumBuffer.cpp  RenderLightsToAccumBuffer.h  RenderSceneToGBuffer.cpp  RenderSceneToGBuffer.h  RenderSceneToShadowMap.cpp  RenderSceneToShadowMap.h  SSAO.cpp  SSAO.h  SobelFilter.cpp  SobelFilter.h  ToneMapping.cpp  ToneMapping.h
src/Rendering/Camera/: Camera.cpp  Camera.h
src/Rendering/Light/: Directionnal.cpp  Directionnal.h  Light.h  Omni.cpp  Omni.h  Spot.cpp  Spot.h
src/Rendering/Mesh/: Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
src/Rendering/Mesh/Impl/: MeshIndexed.cpp  MeshIndexed.h  MeshSimple.cpp  MeshSimple.h
src/Rendering/RHI/: CommandBuffer.h  Framebuffer.h  Pass.h  Pipeline.h  RHI.h  RHI_enums.h  RHI_structs.h  Sampler.h  ShaderModule.h
src/Rendering/RHI/OpenGL/: CommandBuffer.cpp  Framebuffer.cpp  Pass.cpp  Pipeline.cpp  Sampler.cpp
src/Rendering/Scene/: Object.h  Scene.cpp  Scene.h  SceneListener.h
src/Rendering/Shader/: Interface.h  Shader.cpp  Shader.h
src/Rendering/Shader/shaders/: ambient_light.frag  ambient_light.vert  ambient_light_no_ao.frag  ambient_light_no_ao.vert  bbox.frag  bbox.geom  bbox.vert  blur.frag  cel_shading.frag  depth_only.frag  depth_only.vert  directionnal_light.frag  directionnal_light.vert  fog_godrays.frag  fog_scattering.frag  fog_simple.frag  full.frag  full.h  full.vert  full_fog.frag  full_fog.vert  full_frag.h  full_variant_diffuse_only.frag  full_variant_diffuse_specular.frag  full_variant_none.frag  full_variant_specular_only.frag  fullscreen.h  fullscreen.vert  fullscreen_bright.frag  fullscreen_color.frag  fullscreen_depth.frag  fullscreen_exp.frag  fullscreen_fxaa.frag  fullscreen_luminance.frag  fullscreen_luminance_mean.frag  fullscreen_normal.frag  fullscreen_scaled.vert  fullscreen_ssao.frag  fullscreen_viewray.h  fullscreen_viewray.vert  (+13 more)
ui/: EnvSettingsWidget.ui  MainWindow.ui  NodeCreationWindow.ui  NodeEditorWindow.ui  NodeOperationCreationWindow.ui  NodeTextureCreationWindow.ui  mainwindow.ui  meshlistwidget.ui
